# paddown

./: .gitignore  LICENSE  README.md  about.md
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/css/: layout.css  markdown.css  scrollbar.css  tokens.css
src/js/: app.js  context-menu.js  editor.js  export-html.js  file-io.js  find.js  highlighter.js  menus.js  recovery.js  renderer.js  settings-ui.js  settings.js  sidebar.js  tabs.js  toolbar.js  updater.js  utils.js  views.js  welcome.js
