[package]
name = "paddown"
version = "0.1.0"
description = "Markdown notepad that renders identically to Claude Desktop"
authors = ["Paddown"]
edition = "2021"

[lib]
name = "paddown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"
rfd = "0.15"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
