[package]
name = "paddown"
version = "0.2.0-beta.1"
description = "Markdown notepad with professional chat interface styling"
authors = ["Paddown"]
edition = "2021"
license = "MIT"

[lib]
name = "paddown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"
rfd = "0.15"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
